--- a/netrunner.html
+++ b/netrunner.html
@@ -798,7 +798,7 @@ body {
 <!-- HEADER -->
 <header class="header">
   <div class="header-left">
-    <div class="logo">NETRUNNER<span>v3</span></div>
+    <div class="logo">♜ NETRUNNER<span>v3</span></div>
   </div>
   <div class="header-right">
     <div class="conn-status">
